:bug: Fix Table overflow layout
unscrollable table should not have overflow style

close #21879 by revert #20705

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -589,11 +589,6 @@
       box-shadow: inset -10px 0 8px -8px darken(@shadow-color, 5%);
     }
   }
-
-  // Fix for chrome overflow show the scrollbar
-  &:not(&-fixed-header) &-content {
-    overflow-y: hidden;
-  }
 }
 
 @media all and (-ms-high-contrast: none) {
